--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Text2Query Chat Interface</title>
+    <link rel="stylesheet" href="style.css">
+    
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+</head>
+<body>
+    <div class="chat-header">
+        <h2>Text2Query Assistant</h2>
+        <div id="login-container" class="login-container">
+            <div id="g_id_onload"
+                data-client_id="678671148893-k2hokd3vq65bh5ot1er60pejop1bkcv3.apps.googleusercontent.com"
+                data-callback="handleCredentialResponse"
+                data-auto_prompt="false">
+            </div>
+            <div class="g_id_signin" data-type="standard"></div>
+            <button id="logout-btn" class="hidden">Logout</button>
+        </div>
+    </div>
+
+    <div id="initial-state" class="initial-state">
+        <h1 class="welcome-text"></h1>
+    </div>
+    <div class="chat-box" id="chat-box">
+       
+    </div>
+
+    <div class="chat-input-container" id="chat-input-container">
+        <div class="input-wrapper">
+            <input type="text" id="chat-input" placeholder="Type your query here..." autofocus>
+            <button id="send-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="20" height="20">
+                    <path d="M2.01 21L23 12 2.01 3v7l15 2-15 2z"/>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
 
